# easynn-rs

./: .gitignore  Cargo.toml  README.md
fashion_mnist_test/: Cargo.toml
fashion_mnist_test/src/: main.rs
src/: lib.rs
src/layers/: activation.rs  dense.rs  mod.rs
src/models/: losses.rs  mod.rs  sequential.rs
src/nn/: mod.rs
src/tensor/: error.rs  mod.rs  num.rs  shape.rs
