[package]
name = "easynn"
version = "0.1.0-alpha"
edition = "2021"
authors = ["Junyang Zhang <mail@junyang.me>"]
repository = "https://github.com/junyang-zh/easynn-rs"
documentation = ""
license = "MIT"
readme = "README.md"

description = """
A rust crate for quick-and-dirty neuro network developing and training
"""

keywords = ["CNN-RNN-DNN", "backpropagation", "parallel" ,"machine-learning"]

[dependencies]
num-traits = "*"
crossbeam = "*"
num_cpus = "*"