[package]
name = "easynn"
version = "0.1.4-beta"
edition = "2021"
authors = ["Junyang Zhang <mail@junyang.me>"]
repository = "https://github.com/junyang-zh/easynn-rs"
documentation = "https://docs.rs/easynn/0.1.3-alpha/easynn/"
license = "MIT"
readme = "README.md"

description = """
A rust crate for quick-and-dirty neuro network developing and training.
"""

keywords = ["feedforward-neuro-network", "backpropagation", "parallel" ,"machine-learning"]

[dependencies]
itertools = "0.10.2"
num-traits = "0.2.14"
rayon = "1.5"
crossbeam = "0.8.1"
num_cpus = "1.13.1"
rand = "0.8.5"